Continuing particle systems + clouds management
Made:
	- Continued particle systems
	- Added clouds management
	- Removed useless HDR pipeline (need to fix using shaders =( )

To Do:
	- Finish first iteration of particle systems
		- Add modifier
		- Remove element
	- Begin FL!P Integration

--- a/.gitignore
+++ b/.gitignore
@@ -7576,3 +7576,50 @@ SSWE/data/silent_hill/PostProcessor/PostProc.xcodeproj/Dave.pbxuser
 SSWE/data/silent_hill/PostProcessor/PostProc.xcodeproj/project.pbxproj
 SSWE/data/silent_hill/PostProcessor/shaders.h
 SSWE/data/silent_hill/postProductionExample.rar
+SSWE/data/Space/._.DS_Store
+SSWE/data/Space/._39079_blendercyclesearth
+SSWE/data/Space/._39079_blendercyclesearth.zip
+SSWE/data/Space/._ESO_-_Milky_Way.jpg
+SSWE/data/Space/._Shuttle
+SSWE/data/Space/._Shuttle.7z
+SSWE/data/Space/.DS_Store
+SSWE/data/Space/39079_blendercyclesearth.zip
+SSWE/data/Space/39079_blendercyclesearth/._.DS_Store
+SSWE/data/Space/39079_blendercyclesearth/._2k
+SSWE/data/Space/39079_blendercyclesearth/._8k
+SSWE/data/Space/39079_blendercyclesearth/._BlenderCyclesEarth
+SSWE/data/Space/39079_blendercyclesearth/._BLENDSWAP_LICENSE.txt
+SSWE/data/Space/39079_blendercyclesearth/._cloud.combined.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._cloud.combined.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._earth.blend
+SSWE/data/Space/39079_blendercyclesearth/._earth_render_result.png
+SSWE/data/Space/39079_blendercyclesearth/._earthmap.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._earthmap.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._EarthTextures
+SSWE/data/Space/39079_blendercyclesearth/._notes_and_license.txt
+SSWE/data/Space/39079_blendercyclesearth/._oceanmask.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._oceanmask.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._topoBump.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/._topoBump.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/.DS_Store
+SSWE/data/Space/39079_blendercyclesearth/BLENDSWAP_LICENSE.txt
+SSWE/data/Space/39079_blendercyclesearth/cloud.combined.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/cloud.combined.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/earth.blend
+SSWE/data/Space/39079_blendercyclesearth/earth.mtl
+SSWE/data/Space/39079_blendercyclesearth/earth_render_result.png
+SSWE/data/Space/39079_blendercyclesearth/earthmap.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/earthmap.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/notes_and_license.txt
+SSWE/data/Space/39079_blendercyclesearth/oceanmask.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/oceanmask.8k.jpg
+SSWE/data/Space/39079_blendercyclesearth/topoBump.2k.jpg
+SSWE/data/Space/39079_blendercyclesearth/topoBump.8k.jpg
+SSWE/data/Space/ESO_-_Milky_Way.jpg
+SSWE/data/Space/Shuttle.7z
+SSWE/data/Space/Shuttle/._Shuttle.mtl
+SSWE/data/Space/Shuttle/._Shuttle_N.png
+SSWE/data/Space/Shuttle/._Shuttle_P01.png
+SSWE/data/Space/Shuttle/Shuttle.mtl
+SSWE/data/Space/Shuttle/Shuttle_N.png
+SSWE/data/Space/Shuttle/Shuttle_P01.png
