Continued timeline + scenario maker + fixes
To Do:
	- Continue timeline
	- Continue scenario maker
	- Compensate 3D engine

--- a/SSWEProject/SSWECore/SSWECore.vcxproj
+++ b/SSWEProject/SSWECore/SSWECore.vcxproj
@@ -205,6 +205,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWECore\Core\CCoreData.cpp" />
     <ClCompile Include="SSWECore\Core\CCoreObjectPlacement.cpp" />
     <ClCompile Include="SSWECore\Core\CCorePhysics.cpp" />
+    <ClCompile Include="SSWECore\Core\CScenarioData.cpp" />
     <ClCompile Include="SSWECore\DecaleSystem\CBatchingMesh.cpp" />
     <ClCompile Include="SSWECore\DecaleSystem\DecalManager.cpp" />
     <ClCompile Include="SSWECore\DecaleSystem\DecalSceneNode.cpp" />
@@ -223,6 +224,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWECore\Core\CCoreData.h" />
     <ClInclude Include="SSWECore\Core\CCoreObjectPlacement.h" />
     <ClInclude Include="SSWECore\Core\CCorePhysics.h" />
+    <ClInclude Include="SSWECore\Core\CScenarioData.h" />
     <ClInclude Include="SSWECore\DecaleSystem\CBatchingMesh.h" />
     <ClInclude Include="SSWECore\DecaleSystem\DecalManager.h" />
     <ClInclude Include="SSWECore\DecaleSystem\DecalSceneNode.h" />
