--- a/SSWEProject/SSWELib/SSWELib.vcxproj.filters
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj.filters
@@ -163,11 +163,11 @@
     <Filter Include="SSWELib\UserInterfaces\ScenarioMaker">
       <UniqueIdentifier>{8b533d51-1e4e-4f39-b089-addd19705e41}</UniqueIdentifier>
     </Filter>
-    <Filter Include="SSWELib\UserInterfaces\ScenarioMaker\Utils">
-      <UniqueIdentifier>{2d5fc470-34a0-463d-8ea3-27f6509a5d3e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="SSWELib\GUIExtension\TimeLine">
       <UniqueIdentifier>{e3d6c600-92b5-4cb2-84b2-ca71bd356601}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SSWELib\UserInterfaces\ScenarioMaker\ScenarioObjects">
+      <UniqueIdentifier>{2d5fc470-34a0-463d-8ea3-27f6509a5d3e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -486,11 +486,11 @@
     <ClCompile Include="SSWELib\UserInterfaces\ScenarioMaker\CUIScenarioMakerMain.cpp">
       <Filter>SSWELib\UserInterfaces\ScenarioMaker</Filter>
     </ClCompile>
-    <ClCompile Include="SSWELib\UserInterfaces\ScenarioMaker\Utils\CObjectsUtils.cpp">
-      <Filter>SSWELib\UserInterfaces\ScenarioMaker\Utils</Filter>
-    </ClCompile>
     <ClCompile Include="SSWELib\GUIExtension\TimeLine\CGUITimeLine.cpp">
       <Filter>SSWELib\GUIExtension\TimeLine</Filter>
+    </ClCompile>
+    <ClCompile Include="SSWELib\UserInterfaces\ScenarioMaker\ScenarioObjects\CUIScenarioObjects.cpp">
+      <Filter>SSWELib\UserInterfaces\ScenarioMaker\ScenarioObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -881,11 +881,11 @@
     <ClInclude Include="SSWELib\UserInterfaces\ScenarioMaker\CUIScenarioMakerMain.h">
       <Filter>SSWELib\UserInterfaces\ScenarioMaker</Filter>
     </ClInclude>
-    <ClInclude Include="SSWELib\UserInterfaces\ScenarioMaker\Utils\CObjectsUtils.h">
-      <Filter>SSWELib\UserInterfaces\ScenarioMaker\Utils</Filter>
-    </ClInclude>
     <ClInclude Include="SSWELib\GUIExtension\TimeLine\CGUITimeLine.h">
       <Filter>SSWELib\GUIExtension\TimeLine</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWELib\UserInterfaces\ScenarioMaker\ScenarioObjects\CUIScenarioObjects.h">
+      <Filter>SSWELib\UserInterfaces\ScenarioMaker\ScenarioObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
