Added examples projects
Example1 & Example 2 : switch with the integer value in DemoGame.cpp

--- a/SSWEProject/DemoGame/DemoGame.vcxproj
+++ b/SSWEProject/DemoGame/DemoGame.vcxproj
@@ -135,17 +135,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DemoGame\Camera\CThirdCameraSceneNode.h" />
     <ClInclude Include="DemoGame\Character\CCharacterControl.h" />
-    <ClInclude Include="DemoGame\Character\CCharacterLookAt.h" />
+    <ClInclude Include="DemoGame\Example1\CExample1.h" />
+    <ClInclude Include="DemoGame\Example2\CExample2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGame.cpp" />
-    <ClCompile Include="DemoGame\Camera\CThirdCameraSceneNode.cpp" />
     <ClCompile Include="DemoGame\Character\CCharacterControl.cpp" />
-    <ClCompile Include="DemoGame\Character\CCharacterLookAt.cpp" />
+    <ClCompile Include="DemoGame\Example1\CExample1.cpp" />
+    <ClCompile Include="DemoGame\Example2\CExample2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
