--- a/SSWEProject/DemoGame/DemoGame.vcxproj
+++ b/SSWEProject/DemoGame/DemoGame.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="DemoGame\Character\CCharacterControl.h" />
     <ClInclude Include="DemoGame\Example1\CExample1.h" />
     <ClInclude Include="DemoGame\Example2\CExample2.h" />
+    <ClInclude Include="DemoGame\Example3\CExample3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -146,6 +147,7 @@
     <ClCompile Include="DemoGame\Character\CCharacterControl.cpp" />
     <ClCompile Include="DemoGame\Example1\CExample1.cpp" />
     <ClCompile Include="DemoGame\Example2\CExample2.cpp" />
+    <ClCompile Include="DemoGame\Example3\CExample3.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
